Actualización completa del proyecto LENS

--- a/.env
+++ b/.env
@@ -4,7 +4,10 @@ NODE_ENV=production
 CORS_ORIGIN=http://localhost:3000
 
 # Base de Datos
-DATABASE_URL="postgresql://username:password@localhost:5432/lens_db"
+# Copiar de .env.example y configurar:
+DATABASE_URL="postgresql://lens_user:PASSWORD_SEGURO@localhost:5432/lens_db"
+REDIS_PASSWORD=PASSWORD_REDIS_SEGURO
+JWT_SECRET=CLAVE_JWT_MINIMO_32_CARACTERES
 
 # Redis Cache
 REDIS_URL=redis://localhost:6379
