--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,79 @@
+# ===========================================
+# LENS - Configuración de Variables de Entorno
+# Optimizado para Ubuntu 24.04 LTS
+# ===========================================
+
 # Configuración del Servidor
 PORT=3001
 NODE_ENV=production
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=http://localhost:3000,https://tu-dominio.com
 
-# Base de Datos
-DATABASE_URL="postgresql://username:password@localhost:5432/lens_db"
+# Base de Datos PostgreSQL
+DATABASE_URL="postgresql://lens_user:password@localhost:5432/lens_db"
+DB_CONNECTION_TIMEOUT=30000
+DB_MAX_CONNECTIONS=10
+DB_IDLE_TIMEOUT=30000
 
 # Redis Cache
 REDIS_URL=redis://localhost:6379
+REDIS_PASSWORD=redis_secure_password
+REDIS_MAX_RETRIES=3
+REDIS_RETRY_DELAY=100
+REDIS_OFFLINE_QUEUE=true
 CACHE_TTL=3600
 
 # APIs Externas
 TMDB_API_KEY=your_tmdb_api_key_here
 TMDB_BASE_URL=https://api.themoviedb.org/3
+TMDB_TIMEOUT=10000
+TMDB_RATE_LIMIT=40
+TMDB_RATE_WINDOW=10000
+
 OMDB_API_KEY=your_omdb_api_key_here
 OMDB_BASE_URL=http://www.omdbapi.com
+OMDB_TIMEOUT=10000
+OMDB_RATE_LIMIT=1000
+OMDB_RATE_WINDOW=86400000
 
-# Configuración de Rate Limiting
+# Rate Limiting Global
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_SKIP_SUCCESS=false
+RATE_LIMIT_SKIP_FAILED=false
 
 # Configuración de Logs
 LOG_LEVEL=info
 LOG_FILE_PATH=./logs/lens.log
+LOG_MAX_SIZE=10m
+LOG_MAX_FILES=5
+LOG_DATE_PATTERN=YYYY-MM-DD
+LOG_FORMAT=combined
+LOG_CONSOLE=true
 
 # Configuración de Archivos
 UPLOAD_MAX_SIZE=50MB
 UPLOAD_PATH=./uploads
+UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/gif,video/mp4
+UPLOAD_TEMP_PATH=./temp
+UPLOAD_CLEANUP_INTERVAL=3600000
 
 # Configuración de Seguridad
-JWT_SECRET=your_super_secret_jwt_key_here
+JWT_SECRET=your_super_secret_jwt_key_minimum_32_characters_long
+JWT_EXPIRES_IN=24h
+JWT_REFRESH_EXPIRES_IN=7d
 ENCRYPTION_KEY=your_encryption_key_here
+BCRYPT_ROUNDS=12
+SESSION_SECRET=your_session_secret_here
+CSRF_PROTECTION=true
+CSP_ENABLED=true
+COEP_ENABLED=false
 
 # Configuración de Backup
 BACKUP_ENABLED=true
 BACKUP_INTERVAL=24h
 BACKUP_PATH=./backups
+BACKUP_RETENTION_DAYS=30
+BACKUP_COMPRESSION=true
 
 # CONTABO API Configuration
 CONTABO_CLIENT_ID=your_client_id_here
@@ -45,3 +83,19 @@ CONTABO_API_PASSWORD=your_api_password_here
 CONTABO_INSTANCE_ID=123456
 CONTABO_AUTO_BACKUP=true
 CONTABO_BACKUP_RETENTION=7
+CONTABO_REGION=EU
+
+# Monitoreo y Salud
+HEALTH_CHECK_ENABLED=true
+HEALTH_CHECK_INTERVAL=30000
+HEALTH_CHECK_TIMEOUT=5000
+METRICS_ENABLED=false
+METRICS_PORT=9090
+METRICS_PATH=/metrics
+
+# Performance y Optimización
+COMPRESSION_ENABLED=true
+COMPRESSION_LEVEL=6
+COMPRESSION_THRESHOLD=1kb
+STATIC_CACHE_ENABLED=true
+STATIC_CACHE_MAX_AGE=86400
