--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,14 @@ version: '3.8'
 services:
   # PostgreSQL Database
   postgres:
-    image: postgres:15-alpine
+    image: postgres:16-alpine
     container_name: lens-postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: lens_db
       POSTGRES_USER: lens
       POSTGRES_PASSWORD: ${DB_PASSWORD:-lens_secure_password}
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./backups:/backups
@@ -22,13 +23,25 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
   # Redis Cache
   redis:
-    image: redis:7-alpine
+    image: redis:7.2-alpine
     container_name: lens-redis
     restart: unless-stopped
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redis_secure_password}
+    command: >
+      redis-server
+      --appendonly yes
+      --requirepass ${REDIS_PASSWORD:-redis_secure_password}
+      --maxmemory 256mb
+      --maxmemory-policy allkeys-lru
     volumes:
       - redis_data:/data
     ports:
@@ -40,12 +53,20 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 20s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 128M
 
   # LENS Application
   lens-app:
     build:
       context: .
       dockerfile: Dockerfile
+      target: production
     container_name: lens-app
     restart: unless-stopped
     environment:
@@ -56,11 +77,13 @@ services:
       - TMDB_API_KEY=${TMDB_API_KEY}
       - OMDB_API_KEY=${OMDB_API_KEY}
       - PORT=3001
+      - TZ=UTC
     ports:
       - "3001:3001"
     volumes:
       - ./logs:/app/logs
       - ./uploads:/app/uploads
+      - ./backups:/app/backups
     networks:
       - lens-network
     depends_on:
@@ -69,14 +92,21 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 60s
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+        reservations:
+          memory: 512M
 
   # Nginx Reverse Proxy
   nginx:
-    image: nginx:alpine
+    image: nginx:1.25-alpine
     container_name: lens-nginx
     restart: unless-stopped
     ports:
@@ -90,27 +120,19 @@ services:
     networks:
       - lens-network
     depends_on:
-      - lens-app
-
-  # Backup Service
-  backup:
-    image: postgres:15-alpine
-    container_name: lens-backup
-    restart: "no"
-    environment:
-      PGPASSWORD: ${DB_PASSWORD:-lens_secure_password}
-    volumes:
-      - ./backups:/backups
-      - ./scripts:/scripts:ro
-    networks:
-      - lens-network
-    depends_on:
-      - postgres
-    command: >
-      sh -c '
-        echo "0 2 * * * /scripts/backup.sh" | crontab -
-        crond -f
-      '
+      lens-app:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+        reservations:
+          memory: 64M
 
 volumes:
   postgres_data:
@@ -121,3 +143,6 @@ volumes:
 networks:
   lens-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
