--- a/package.json
+++ b/package.json
@@ -4,65 +4,48 @@
   "description": "Live Entertainment Network Scanner - Herramienta profesional para clasificación de contenido multimedia",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "server:dev": "nodemon --exec ts-node src/server.ts",
-    "client:dev": "cd client && npm run dev",
-    "build": "npm run build:server && npm run build:client",
-    "build:server": "tsc",
-    "build:client": "cd client && npm run build",
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "build": "tsc",
     "start": "node dist/server.js",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.ts --fix",
     "migrate": "npx prisma migrate deploy",
     "db:generate": "npx prisma generate",
-    "db:studio": "npx prisma studio"
+    "db:studio": "npx prisma studio",
+    "db:reset": "npx prisma migrate reset --force",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.1",
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "@prisma/client": "^5.0.0",
     "express": "^4.18.2",
-    "helmet": "^7.1.0",
+    "winston": "^3.10.0",
+    "redis": "^4.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "zod": "^3.22.0",
     "joi": "^17.11.0",
     "multer": "^1.4.5-lts.1",
+    "cheerio": "^1.0.0-rc.12",
+    "xml2js": "^0.6.2",
+    "sharp": "^0.32.6",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "node-cron": "^3.0.3",
-    "prisma": "^5.7.1",
-    "rate-limiter-flexible": "^2.4.2",
-    "redis": "^4.6.11",
-    "sharp": "^0.33.1",
-    "winston": "^3.11.0",
-    "xml2js": "^0.6.2"
+    "rate-limiter-flexible": "^3.0.8"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.5",
-    "@types/xml2js": "^0.4.14",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node-cron": "^3.0.8",
+    "typescript": "^5.0.0",
+    "prisma": "^5.0.0",
+    "ts-node": "^10.9.0"
   },
-  "keywords": [
-    "streaming",
-    "m3u",
-    "iptv",
-    "scanner",
-    "classifier",
-    "tmdb",
-    "imdb"
-  ],
-  "author": "LENS Team",
-  "license": "MIT"
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  }
 }
