--- a/package.json
+++ b/package.json
@@ -1,51 +1,42 @@
 {
   "name": "lens-scanner",
   "version": "1.0.0",
-  "description": "Live Entertainment Network Scanner - Herramienta profesional para clasificación de contenido multimedia",
+  "description": "IPTV Content Scanner and Manager",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts --fix",
-    "migrate": "npx prisma migrate deploy",
-    "db:generate": "npx prisma generate",
-    "db:studio": "npx prisma studio",
-    "db:reset": "npx prisma migrate reset --force",
-    "postinstall": "npx prisma generate"
+    "dev": "ts-node src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.22.0",
     "express": "^4.18.2",
-    "winston": "^3.10.0",
-    "redis": "^4.6.0",
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "zod": "^3.22.0",
-    "joi": "^17.11.0",
-    "multer": "^1.4.5-lts.1",
-    "cheerio": "^1.0.0-rc.12",
-    "xml2js": "^0.6.2",
-    "sharp": "^0.32.6",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "node-cron": "^3.0.3",
-    "rate-limiter-flexible": "^2.4.2"
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0",
+    "rate-limiter-flexible": "^2.4.2",
+    "redis": "^4.6.8",
+    "multer": "^1.4.5-lts.1",
+    "compression": "^1.7.4",
+    "dotenv": "^16.3.1",
+    "axios": "^1.5.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.5.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/bcryptjs": "^2.4.2",
-    "@types/node-cron": "^3.0.8",
-    "typescript": "^5.0.0",
-    "prisma": "^5.0.0",
-    "ts-node": "^10.9.0"
-  },
-  "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=10.0.0"
+    "@types/cors": "^2.8.13",
+    "@types/multer": "^1.4.7",
+    "@types/compression": "^1.7.2",
+    "typescript": "^5.1.6",
+    "ts-node": "^10.9.1",
+    "prisma": "^5.22.0",
+    "jest": "^29.6.2",
+    "@types/jest": "^29.5.3"
   }
 }
